--- a/citations.bib
+++ b/citations.bib
@@ -74,3 +74,166 @@
 	author = {Hutter, Marco},
 	date = {2022-05-24},
 }
+
+@misc{kingma_adam_2017,
+	title = {Adam: A Method for Stochastic Optimization},
+	url = {https://arxiv.org/abs/1412.6980},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	date = {2017},
+	note = {\_eprint: 1412.6980},
+}
+
+@misc{liu_variance_2021,
+	title = {On the Variance of the Adaptive Learning Rate and Beyond},
+	url = {https://arxiv.org/abs/1908.03265},
+	author = {Liu, Liyuan and Jiang, Haoming and He, Pengcheng and Chen, Weizhu and Liu, Xiaodong and Gao, Jianfeng and Han, Jiawei},
+	date = {2021},
+	note = {\_eprint: 1908.03265},
+}
+
+@misc{li_visualizing_2018,
+	title = {Visualizing the Loss Landscape of Neural Nets},
+	url = {https://arxiv.org/abs/1712.09913},
+	author = {Li, Hao and Xu, Zheng and Taylor, Gavin and Studer, Christoph and Goldstein, Tom},
+	date = {2018},
+	note = {\_eprint: 1712.09913},
+}
+
+@misc{ioffe_batch_2015,
+	title = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+	url = {https://arxiv.org/abs/1502.03167},
+	author = {Ioffe, Sergey and Szegedy, Christian},
+	date = {2015},
+	note = {\_eprint: 1502.03167},
+}
+
+@misc{santurkar_how_2019,
+	title = {How Does Batch Normalization Help Optimization?},
+	url = {https://arxiv.org/abs/1805.11604},
+	author = {Santurkar, Shibani and Tsipras, Dimitris and Ilyas, Andrew and Madry, Aleksander},
+	date = {2019},
+	note = {\_eprint: 1805.11604},
+}
+
+@misc{ioffe_batch_2017,
+	title = {Batch Renormalization: Towards Reducing Minibatch Dependence in Batch-Normalized Models},
+	url = {https://arxiv.org/abs/1702.03275},
+	author = {Ioffe, Sergey},
+	date = {2017},
+	note = {\_eprint: 1702.03275},
+}
+
+@misc{hessel_rainbow_2017,
+	title = {Rainbow: Combining Improvements in Deep Reinforcement Learning},
+	url = {https://arxiv.org/abs/1710.02298},
+	author = {Hessel, Matteo and Modayil, Joseph and Hasselt, Hado van and Schaul, Tom and Ostrovski, Georg and Dabney, Will and Horgan, Dan and Piot, Bilal and Azar, Mohammad and Silver, David},
+	date = {2017},
+	note = {\_eprint: 1710.02298},
+}
+
+@misc{pathak_curiosity-driven_2017,
+	title = {Curiosity-driven Exploration by Self-supervised Prediction},
+	url = {https://arxiv.org/abs/1705.05363},
+	author = {Pathak, Deepak and Agrawal, Pulkit and Efros, Alexei A. and Darrell, Trevor},
+	date = {2017},
+	note = {\_eprint: 1705.05363},
+}
+
+@article{hwangbo_learning_2019,
+	title = {Learning agile and dynamic motor skills for legged robots},
+	volume = {4},
+	issn = {2470-9476},
+	url = {http://dx.doi.org/10.1126/scirobotics.aau5872},
+	doi = {10.1126/scirobotics.aau5872},
+	number = {26},
+	journaltitle = {Science Robotics},
+	author = {Hwangbo, Jemin and Lee, Joonho and Dosovitskiy, Alexey and Bellicoso, Dario and Tsounis, Vassilios and Koltun, Vladlen and Hutter, Marco},
+	date = {2019-01},
+	note = {Publisher: American Association for the Advancement of Science ({AAAS})},
+}
+
+@article{lee_learning_2020,
+	title = {Learning quadrupedal locomotion over challenging terrain},
+	volume = {5},
+	issn = {2470-9476},
+	url = {http://dx.doi.org/10.1126/scirobotics.abc5986},
+	doi = {10.1126/scirobotics.abc5986},
+	number = {47},
+	journaltitle = {Science Robotics},
+	author = {Lee, Joonho and Hwangbo, Jemin and Wellhausen, Lorenz and Koltun, Vladlen and Hutter, Marco},
+	date = {2020-10},
+	note = {Publisher: American Association for the Advancement of Science ({AAAS})},
+}
+
+@article{luo_reinforcement_2021,
+	title = {Reinforcement Learning and Control of a Lower Extremity Exoskeleton for Squat Assistance},
+	volume = {Volume 8 - 2021},
+	issn = {2296-9144},
+	url = {https://www.frontiersin.org/journals/robotics-and-ai/articles/10.3389/frobt.2021.702845},
+	doi = {10.3389/frobt.2021.702845},
+	abstract = {{\textless}p{\textgreater}A significant challenge for the control of a robotic lower extremity rehabilitation exoskeleton is to ensure stability and robustness during programmed tasks or motions, which is crucial for the safety of the mobility-impaired user. Due to various levels of the user’s disability, the human-exoskeleton interaction forces and external perturbations are unpredictable and could vary substantially and cause conventional motion controllers to behave unreliably or the robot to fall down. In this work, we propose a new, reinforcement learning-based, motion controller for a lower extremity rehabilitation exoskeleton, aiming to perform collaborative squatting exercises with efficiency, stability, and strong robustness. Unlike most existing rehabilitation exoskeletons, our exoskeleton has ankle actuation on both sagittal and front planes and is equipped with multiple foot force sensors to estimate center of pressure ({CoP}), an important indicator of system balance. This proposed motion controller takes advantage of the {CoP} information by incorporating it in the state input of the control policy network and adding it to the reward during the learning to maintain a well balanced system state during motions. In addition, we use dynamics randomization and adversary force perturbations including large human interaction forces during the training to further improve control robustness. To evaluate the effectiveness of the learning controller, we conduct numerical experiments with different settings to demonstrate its remarkable ability on controlling the exoskeleton to repetitively perform well balanced and robust squatting motions under strong perturbations and realistic human interaction forces.{\textless}/p{\textgreater}},
+	journaltitle = {Frontiers in Robotics and {AI}},
+	author = {Luo, Shuzhen and Androwis, Ghaith and Adamovich, Sergei and Su, Hao and Nunez, Erick and Zhou, Xianlian},
+	date = {2021},
+}
+
+@article{luo_experiment-free_2024,
+	title = {Experiment-free exoskeleton assistance via learning in simulation},
+	volume = {630},
+	issn = {1476-4687},
+	url = {https://doi.org/10.1038/s41586-024-07382-4},
+	doi = {10.1038/s41586-024-07382-4},
+	abstract = {Exoskeletons have enormous potential to improve human locomotive performance1–3. However, their development and broad dissemination are limited by the requirement for lengthy human tests and handcrafted control laws2. Here we show an experiment-free method to learn a versatile control policy in simulation. Our learning-in-simulation framework leverages dynamics-aware musculoskeletal and exoskeleton models and data-driven reinforcement learning to bridge the gap between simulation and reality without human experiments. The learned controller is deployed on a custom hip exoskeleton that automatically generates assistance across different activities with reduced metabolic rates by 24.3\%, 13.1\% and 15.4\% for walking, running and stair climbing, respectively. Our framework may offer a generalizable and scalable strategy for the rapid development and widespread adoption of a variety of assistive robots for both able-bodied and mobility-impaired individuals.},
+	pages = {353--359},
+	number = {8016},
+	journaltitle = {Nature},
+	shortjournal = {Nature},
+	author = {Luo, Shuzhen and Jiang, Menghan and Zhang, Sainan and Zhu, Junxi and Yu, Shuangyue and Dominguez Silva, Israel and Wang, Tian and Rouse, Elliott and Zhou, Bolei and Yuk, Hyunwoo and Zhou, Xianlian and Su, Hao},
+	date = {2024-06-01},
+}
+
+@misc{choromanska_loss_2015,
+	title = {The Loss Surfaces of Multilayer Networks},
+	url = {https://arxiv.org/abs/1412.0233},
+	author = {Choromanska, Anna and Henaff, Mikael and Mathieu, Michael and Arous, Gérard Ben and {LeCun}, Yann},
+	date = {2015},
+	note = {\_eprint: 1412.0233},
+}
+
+@misc{zhang_understanding_2017,
+	title = {Understanding deep learning requires rethinking generalization},
+	url = {https://arxiv.org/abs/1611.03530},
+	author = {Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
+	date = {2017},
+	note = {\_eprint: 1611.03530},
+}
+
+@misc{arpit_closer_2017,
+	title = {A Closer Look at Memorization in Deep Networks},
+	url = {https://arxiv.org/abs/1706.05394},
+	author = {Arpit, Devansh and Jastrzębski, Stanisław and Ballas, Nicolas and Krueger, David and Bengio, Emmanuel and Kanwal, Maxinder S. and Maharaj, Tegan and Fischer, Asja and Courville, Aaron and Bengio, Yoshua and Lacoste-Julien, Simon},
+	date = {2017},
+	note = {\_eprint: 1706.05394},
+}
+
+@misc{ruder_overview_2017,
+	title = {An overview of gradient descent optimization algorithms},
+	url = {https://arxiv.org/abs/1609.04747},
+	author = {Ruder, Sebastian},
+	date = {2017},
+	note = {\_eprint: 1609.04747},
+}
+
+@book{nielsen_neural_2019,
+	title = {Neural Networks and Deep Learning},
+	url = {https://neuralnetworksanddeeplearning.com/},
+	author = {Nielsen, Michael},
+	date = {2019-12},
+}
+
+@unpublished{sanderson_backpropagation_2017,
+	title = {Backpropagation calculus {\textbar} {DL}4},
+	url = {https://www.youtube.com/watch?v=tIeHLnjs5U8},
+	author = {Sanderson, Grant},
+	date = {2017-11-03},
+}
