--- a/main.tex
+++ b/main.tex
@@ -425,10 +425,11 @@ Substituting these terms into the equations, we have
 
 wow this is really complicated to explain with math will come back later
 
-\section{Overfitting }\label{sec:overfitting}
+\section{Overfitting}\label{sec:overfitting}
 \textbf{Overfitting} is a phenomenon that occurs when a model learns the training data too well, and is unable to generalize to new data. Generally, models with more parameters and degrees of freedom are more prone to overfitting. This may be mitigated by simply using a smaller model or by stopping training earlier, but these methods are not always feasible.
 
 \subsection{Cross-validation}
+To`'
 
 \subsection{Regularization}
 
@@ -646,10 +647,19 @@ Recall the universal approximation theorem from Section~\ref{sec:nn}. Since $\pi
 \section{Hutter, Lee, Hwangbo et al.\ and the ANYmal by ANYbotics}
 
 \cite{hutter_legged_2022}
+\cite{lee_learning_2020}
 
 \section{Luo et al.\ and Exoskeletons}
+\cite{luo_reinforcement_2021}
+\cite{luo_experiment-free_2024}
+
 
 \section{more examples will go here}
+
+
+
+
+\nocite{*} % remove after finishing citation refs
 
 \printglossaries
 
