a bunch of figs

--- a/citations.bib
+++ b/citations.bib
@@ -150,6 +150,7 @@
 	author = {Hwangbo, Jemin and Lee, Joonho and Dosovitskiy, Alexey and Bellicoso, Dario and Tsounis, Vassilios and Koltun, Vladlen and Hutter, Marco},
 	date = {2019-01},
 	note = {Publisher: American Association for the Advancement of Science ({AAAS})},
+	file = {PDF:/home/sky/Zotero/storage/6NR5ND5E/Hwangbo et al. - 2019 - Learning agile and dynamic motor skills for legged robots.pdf:application/pdf},
 }
 
 @article{lee_learning_2020,
@@ -163,6 +164,7 @@
 	author = {Lee, Joonho and Hwangbo, Jemin and Wellhausen, Lorenz and Koltun, Vladlen and Hutter, Marco},
 	date = {2020-10},
 	note = {Publisher: American Association for the Advancement of Science ({AAAS})},
+	file = {PDF:/home/sky/Zotero/storage/Q5ND2X9Q/Lee et al. - 2020 - Learning quadrupedal locomotion over challenging terrain.pdf:application/pdf},
 }
 
 @article{luo_reinforcement_2021,
@@ -236,4 +238,31 @@
 	url = {https://www.youtube.com/watch?v=tIeHLnjs5U8},
 	author = {Sanderson, Grant},
 	date = {2017-11-03},
+}
+
+@misc{commons_filemarkov_2023,
+	title = {File:Markov diagram v2.svg — Wikimedia Commons, the free media repository},
+	url = {https://commons.wikimedia.org/w/index.php?title=File:Markov_diagram_v2.svg&oldid=757108625},
+	author = {Commons, Wikimedia},
+	date = {2023},
+}
+
+@misc{commons_filek-fold_2024,
+	title = {File:K-fold cross validation {EN}.svg — Wikimedia Commons, the free media repository},
+	url = {https://commons.wikimedia.org/w/index.php?title=File:K-fold_cross_validation_EN.svg&oldid=932198002},
+	author = {Commons, Wikimedia},
+	date = {2024},
+}
+
+@unpublished{silver_lecture_nodate,
+	title = {Lecture 2: Markov Decision Processes},
+	url = {https://web.stanford.edu/class/cme241/lecture_slides/david_silver_slides/MDP.pdf},
+	author = {Silver, David},
+}
+
+@book{bishop_deep_2023,
+	title = {Deep learning: Foundations and concepts},
+	publisher = {Springer Nature},
+	author = {Bishop, Christopher M and Bishop, Hugh},
+	date = {2023},
 }
